--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,15 +77,15 @@ jobs:
     - name: Build and push PHP Docker image 
       run: | 
         cd php  # Entrar al directorio PHP
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/mi_app_cine:v1 . 
-        docker push ${{ secrets.DOCKER_USERNAME }}/mi_app_cine:v1
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/phpconcesionario:v1 . 
+        docker push ${{ secrets.DOCKER_USERNAME }}/phpconcesionario:v1
 
     # Paso cd mysql: entrar al directorio mysql antes de construir la imagen Docker
     - name: Build and push MySQL Docker image
       run: |
         cd mysql  # Entrar al directorio MySQL
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/mi_cine:v1 .
-        docker push ${{ secrets.DOCKER_USERNAME }}/mi_cine:v1
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/phpconcesionarios:v1 .
+        docker push ${{ secrets.DOCKER_USERNAME }}/phpconcesionarios:v1
 
     - name: Transfer compose.yml to remote server 
       uses: appleboy/scp-action@master 
